# MEC202

./: .gitignore  README.md  calibration.json  config.py  main.py  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
arduino/: stamp_controller.ino
database/: audit.py  models.py  review_queue.py  template.py
demo/: demo.db  demo_app.py  run_demo.py
demo/templates/: base.html  index.html  log.html  login.html  review.html  stats.html
hardware/: arm.py  stamp.py
proposal/: proposal.aux  proposal.fdb_latexmk  proposal.fls  proposal.out  proposal.tex  proposal_cn.aux  proposal_cn.fdb_latexmk  proposal_cn.fls  proposal_cn.out  proposal_cn.tex
validator/: id_checker.py  rules.py
vision/: camera.py  ocr.py
web/: app.py
web/templates/: admin.html  base.html  calibration.html  index.html  log.html  login.html  review.html  template_edit.html
